# gst-rubberband

./: .gitignore  AUTHORS  README.md  configure.ac
src/: Makefile.am  gstrubberband.c  gstrubberband.h
